@@ -1,5 +1,8 @@
 * Improvement: Add an outline to links on their focus state
   to improve accessibility through keyboard navigation.
+* Improvement: Limit index pages
+  to displaying four columns of attributes by default,
+  to reduce clutter and overflow in the first-run experience.
 * Improvement: Limit index pages to showing 20 items by default.
   Developers can customize the action to update or remove the limit,
   or to implement pagination with the system of their choice.
